--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,4 +227,12 @@ input[type=submit] {
 }
 
 @media screen and (max-width: 640px){
-}
+  #masthead {
+    position: static;
+  }
+
+  .main-section {
+    margin-top: -120px;
+  }
+
+} 
