--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,14 @@ input[type=submit] {
 }
 
 @media screen and (max-width: 768px){
+  #masthead {
+    position: static;
+  }
+
+  .main-section {
+    margin-top: -120px;
+  }
+
 }
 
 @media screen and (max-width: 640px){
